# multi-agent-course

./: .gitignore  Module01_embed_and_upload_data_to_Qdrant.ipynb  README.md  Upload_data_to_qdrant.ipynb
Building_Advanced_LLM_Applications_Module_5/agentic_rag/qdrant_data/: meta.json
MCP/mcp-basic-agent-implementation/: README.md  example_server.py
MCP/mcp-sqlite-agent-implementation/: .gitignore  mcp_server.py  pyproject.toml
MCP_Implementation/mcp-basic-agent-implementation/: mcp_client.py  requirements.txt
MCP_Implementation/mcp-sqlite-agent-implementation/: README.md  mcp_client.py  requirements.txt
Module_1/Agentic_RAG/: Agentic_RAG_Notebook.ipynb  Module01_embed_and_upload_data_to_Qdrant.ipynb  Upload_data_to_Qdrant_Notebook.ipynb  Upload_data_to_qdrant.ipynb
Module_1/Agentic_RAG/qdrant_data/collection/opnai_data/: storage.sqlite
Module_2/Quantization/: Bitsnbytes_4bit_Quantization.ipynb  TextStreamer_Meta_Llama_3_1_8B_Instruct.ipynb  bitsnbytes_4bit_notebook.ipynb
