[project]
name = "mcp-client-x"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.165.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "openai>=1.65.5",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "youtube-transcript-api>=1.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_client_x"]

